{
    "name": "AbzuControls",
    "maps": [
        {
            "name": "FreeMovement",
            "id": "98185b74-0d36-4c9c-9bf7-34044681d81a",
            "actions": [
                {
                    "name": "LeftStick",
                    "type": "PassThrough",
                    "id": "e9a150d8-aea2-44bd-8cb3-19100be98874",
                    "expectedControlType": "Vector2",
                    "processors": "StickDeadzone(min=0.15,max=0.9)",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightStick",
                    "type": "Value",
                    "id": "26c78906-ec00-4a9e-9a8f-56762a0b86de",
                    "expectedControlType": "Vector2",
                    "processors": "StickDeadzone(min=0.15,max=0.9)",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "WASD",
                    "type": "Value",
                    "id": "4bf1a634-2904-4963-936a-8312f6ac16e5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseMove",
                    "type": "Value",
                    "id": "3a35ae01-4bd8-4c4d-ba32-166a60809b86",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d592fbbe-6497-4c27-843f-024cede34542",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "78da7fe1-7b50-4c13-bd2c-09e4a1c497ee",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightStick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "834b91ea-512b-4183-b167-cc2385eebbe8",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "e5571eed-a75a-4070-830b-8667cf6850e7",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "5493d7a9-7cf3-4b5f-9109-74ee59ec8a0b",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "0e373652-8519-4bb1-a26d-59616283f03c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "528560c2-af55-4683-bf79-4a4c04cf9733",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "da847af6-dd69-4abb-9ff5-5c2366c60970",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WASD",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}